Corregido bug de barra de deslizamiento siempre visible

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,10 @@ body {
 	.scrollbar-hide::-webkit-scrollbar {
 		display: none;
 	}
+
+	.scrollbar-hide {
+		scrollbar-width: none;
+	}
 }
 
 .circle {
